Bug 154942 - Another crash in plasma
Summary: Another crash in plasma
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-01 22:17 UTC by Pablo De Napoli
Modified: 2008-01-02 11:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pablo De Napoli 2008-01-01 22:17:55 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 4.1.3 20070929 (prerelease) (Ubuntu 4.1.2-16ubuntu2) gcc in ubuntu Gutsy (7-10)
OS:                Linux

I'm reporting yet another crash in plasma (in KDE 4.0 / subversion)
when trying to add and then remove an application to the panel
I'm submitting a backtrace:

Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1239615808 (LWP 11459)]
[New Thread -1298547824 (LWP 11508)]
[New Thread -1267151984 (LWP 11460)]
[KCrash handler]
#6  0xffffe410 in __kernel_vsyscall ()
#7  0xb660d875 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb660f201 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb731c01d in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb731c0a1 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb731c20d in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb3943e9a in TaskManager::TaskRMBMenu::makeAdvancedMenu (this=0xbfd68108, 
    t=@0xbfd6802c) at /home/kde-devel/kde/include/ksharedptr.h:114
#13 0xb3943f32 in TaskManager::TaskRMBMenu::fillMenu (this=0xbfd68108, 
    t=@0xbfd680d8)
    at /home/kde-devel/kde/src/kdebase/workspace/libs/taskmanager/taskrmbmenu.cpp:73
#14 0xb3944c77 in TaskRMBMenu (this=0xbfd68108, task=@0xbfd68134, show=true, 
    parent=0x0)
    at /home/kde-devel/kde/src/kdebase/workspace/libs/taskmanager/taskrmbmenu.cpp:66
#15 0xb3958c68 in WindowTaskItem::contextMenuEvent (this=0x87856e0, 
    e=0xbfd686f8)
    at /home/kde-devel/kde/src/kdebase/workspace/plasma/applets/tasks/windowtaskitem.cpp:156
#16 0xb711b71d in QGraphicsItem::sceneEvent () from /usr/lib/libQtGui.so.4
#17 0xb7ec635f in Plasma::Widget::sceneEvent (this=0x87856e0, event=0xbfd686f8)
    at /home/kde-devel/kde/src/kdebase/workspace/libs/plasma/widgets/widget.cpp:598
#18 0xb7123743 in ?? () from /usr/lib/libQtGui.so.4
#19 0x087856e0 in ?? ()
#20 0xbfd686f8 in ?? ()
#21 0xbfd686f8 in ?? ()
#22 0xb72152d8 in ?? () from /usr/lib/libQtGui.so.4
#23 0xb71331b8 in QGraphicsSceneContextMenuEvent::pos ()
   from /usr/lib/libQtGui.so.4
#24 0xb712a237 in QGraphicsScene::contextMenuEvent ()
   from /usr/lib/libQtGui.so.4
#25 0xb712aa2c in QGraphicsScene::event () from /usr/lib/libQtGui.so.4
#26 0xb6bb644d in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#27 0xb6bb674e in QApplication::notify () from /usr/lib/libQtGui.so.4
#28 0xb7971953 in KApplication::notify (this=0x8060760, receiver=0x80dfa20, 
    event=0xbfd686f8)
    at /home/kde-devel/kde/src/kdelibs/kdeui/kernel/kapplication.cpp:314
#29 0xb73da456 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#30 0xb6bb317f in ?? () from /usr/lib/libQtGui.so.4
#31 0x08060760 in ?? ()
#32 0x080dfa20 in ?? ()
#33 0xbfd686f8 in ?? ()
#34 0x0836af00 in ?? ()
#35 0xb71332d0 in QGraphicsSceneContextMenuEvent::reason ()
   from /usr/lib/libQtGui.so.4
#36 0xb71375f4 in QGraphicsView::contextMenuEvent ()
   from /usr/lib/libQtGui.so.4
#37 0xb6c08675 in QWidget::event () from /usr/lib/libQtGui.so.4
#38 0xb6f526f2 in QFrame::event () from /usr/lib/libQtGui.so.4
#39 0xb6fe495f in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#40 0xb713e4d9 in QGraphicsView::viewportEvent () from /usr/lib/libQtGui.so.4
#41 0xb6fe74ee in ?? () from /usr/lib/libQtGui.so.4
#42 0x082615b8 in ?? ()
#43 0xbfd68dec in ?? ()
#44 0xbfd68918 in ?? ()
#45 0xb6fe7520 in ?? () from /usr/lib/libQtGui.so.4
#46 0x0825ec00 in ?? ()
#47 0xbfd68dec in ?? ()
#48 0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Jason Stubbs 2008-01-02 11:06:58 UTC
SVN commit 755885 by jstubbs:

With WindowTaskItem handling startup tasks and active windows, it's possible
that _task is null. If _task is null, it's not possible to display its
context menu so ignoring the event for the time being.

BUG: 154942


 M  +5 -5      windowtaskitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=755885