With WindowTaskItem handling startup tasks and active windows, it's possible that _task is null. If _task is null, it's not possible to display its context menu so ignoring the event for the time being.

BUG: 154942

svn path=/trunk/KDE/kdebase/workspace/; revision=755885